# Developer-Assistant

./: .gitignore  CHANGELOG.md  Changelog-2026-03-16.bak  Changelog-Backup-2026-03-07.md  Interface.py  LICENSE  Makefile  PYPI.md  README.md  SETUP.md  memory.ini  pyproject.toml  release.sh  requirements.txt
.github/workflows/: publish.yml
DA/: Interface.py
DA/Modules/: config_manager.py  projects_manager.py  version_logic.py
DA/default/: default-memory.ini
Documents/: SYSTEM STRUCTURE.txt  changelog example.md  memory example.ini  project-example.ini
Modules/: config_manager.py  opener.py  projects_manager.py  version_logic.py
Projects/: Test-Project.ini
Templates/: .compact_template.txt  entry_template.txt
Test-Project/: CHANGELOG.md  Changelog-Backup-2026-03-07.md
da/: interface.py  intro.md
da/default/: test-project.ini
da/modules/: config_manager.py  opener.py  projects_manager.py  terminal.py  version_logic.py
da/templates/: changelog_template.txt
documents/: SYSTEM STRUCTURE.txt  SYSTEM_STRUCTURE.txt  default-memory.ini  project-example.ini
scripts/: build.sh  release.sh  run.sh
