[project]
name = "developer-assistant"
version = "0.3.5"
description = "A lightweight TUI app for managing and simplifying your Markdown changelogs."
readme = "PYPI.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "platformdirs>=4.9.4",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.2",
    "termcolor>=3.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Ivory-Hubert/Developer-Assistant"
Changelog = "https://github.com/Ivory-Hubert/Developer-Assistant/blob/main/CHANGELOG.md"

[project.scripts]
developer-assistant = "da.interface:main"
da-ui = "da.interface:main"

[tool.setuptools]
packages = ["da", "da.modules", "da.templates", "da.default"]
include-package-data = true

[tool.setuptools.package-data]
"da" = ["intro.md"]
"da.templates" = ["*"]
"da.default" = ["*"]
